# info_Extraction

./: .gitignore  LICENSE  deployment_checklist.md  final_summary.md  project_summary.md  pytest_instructions.md  quick_test.py  readme.md  setup_guide.md  start_bat.txt  start_script.sh
backend/: .coverage  .env  extraction.db  main.py  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  test_crew.py
backend/src/: agents.py  crew.py  db.py  db_models.py  lg_helpers.py  lg_workflow.py  models.py  ocr_test.py  prompts_lg.py  tasks.py  tools.py  workflow_run.py
backend/src/utils/: logging_config.py
backend/tests/: conftest.py
backend/tests/evaluation/: __init__.py  test_deepeval_evaluation.py
backend/tests/integration/: test_lg_workflow.py
backend/tests/performance/: test_performance.py
backend/tests/unit/: test_lg_helpers.py  test_models.py  test_prompts_lg.py
frontend/: package-lock.json  package.json  server.js
frontend/public/: index.html
