[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "crewai[google-genai,tools]>=1.2.0",
    "flask>=3.1.2",
    "flask-cors>=6.0.1",
    "flask-restx>=1.3.2",
    "langchain-google-genai",
    "langgraph",
    "loguru>=0.7.3",
    "mistralai>=1.9.11",
    "pdf2image>=1.17.0",
    "pillow>=12.0.0",
    "pydantic>=2.12.3",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.20",
    "requests>=2.32.5",
]
